chap_topic/log/build_2025-01-27_21-48-19/demo_python_topic/stdout_stderr.log
running egg_info
creating ../../build/demo_python_topic/demo_python_topic.egg-info
writing ../../build/demo_python_topic/demo_python_topic.egg-info/PKG-INFO
writing dependency_links to ../../build/demo_python_topic/demo_python_topic.egg-info/dependency_links.txt
writing entry points to ../../build/demo_python_topic/demo_python_topic.egg-info/entry_points.txt
writing requirements to ../../build/demo_python_topic/demo_python_topic.egg-info/requires.txt
writing top-level names to ../../build/demo_python_topic/demo_python_topic.egg-info/top_level.txt
writing manifest file '../../build/demo_python_topic/demo_python_topic.egg-info/SOURCES.txt'
reading manifest file '../../build/demo_python_topic/demo_python_topic.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/demo_python_topic/demo_python_topic.egg-info/SOURCES.txt'
running build
running build_py
creating /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/build
creating /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/build/lib
creating /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/build/lib/demo_python_topic
copying demo_python_topic/novel_pub_node.py -> /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/build/lib/demo_python_topic
copying demo_python_topic/__init__.py -> /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/build/lib/demo_python_topic
running install
running install_lib
creating /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic
copying /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/build/lib/demo_python_topic/novel_pub_node.py -> /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic
copying /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/build/lib/demo_python_topic/__init__.py -> /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic
byte-compiling /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic/novel_pub_node.py to novel_pub_node.cpython-310.pyc
  File "/mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic/novel_pub_node.py", line 7
    form queue import Queue
         ^^^^^
SyntaxError: invalid syntax

byte-compiling /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic/__init__.py to __init__.cpython-310.pyc
running install_data
creating /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/share/ament_index
creating /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/share/ament_index/resource_index
creating /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/share/ament_index/resource_index/packages
copying resource/demo_python_topic -> /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/share/ament_index/resource_index/packages
copying package.xml -> /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/share/demo_python_topic
running install_egg_info
Copying ../../build/demo_python_topic/demo_python_topic.egg-info to /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic-0.0.0-py3.10.egg-info
running install_scripts
Installing demo_python_topic script to /mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/demo_python_topic
writing list of installed files to '/mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/build/demo_python_topic/install.log'
